chore: completed homepage draft v1

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -44,7 +44,13 @@ body{
 }
 
 
+p,span, a{
+  font-family: 'Pangram-Regular', sans-serif;
+}
 
+h1, h2, h3 {
+  font-family: 'Pangram-Bold', sans-serif;
+}
 
 
 .dropdown {
