chore: scroll animation

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -65,6 +65,7 @@ h1, h2, h3 {
   min-width: 558px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  transform: translateY(2px);
 }
 
 .dropdown-content a {
