chore: new push and changes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -198,3 +198,11 @@ h1, h2, h3 {
 .arrow-main:hover .arrow-span {
   transform: translateX(-50%);
 }
+
+
+
+/* .nav-logo-wrapper{
+  mix-blend-mode: difference;
+}
+
+.nav-logo-wrapper svg {     filter: invert(0) } */
