--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,19 @@ body{
   margin: 0;
 }
 
+.scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none; /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
 @font-face {
   font-family: 'Pangram-Regular';
   src: url("../../assets/fonts/Pangram-Regular.otf");
@@ -62,26 +75,26 @@ h1, h2, h3 {
   display: none;
   position: absolute;
   background-color: #2E2E2E;
-  min-width: 558px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   transform: translateY(2px);
+  transform: translateX(-59%);
 }
 
-.dropdown-content a {
+.dropdown-content p {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
+  display: flex;
+  width: 100%;
 }
 
-.dropdown-content a:hover {
-  background-color: #0D0C0D;
-  border-radius: 4px;
-  
+.dropdown-content p:hover {
+  background-color: #161616;
+  border-radius: 999px;
 }
 
-.dropdown:hover .dropdown-content {display: grid;}
+.dropdown:hover .dropdown-content {display: flex; min-width: 912px; justify-content: space-between; }
 
 .dropdown:hover .dropbtn {}
 
@@ -199,6 +212,22 @@ h1, h2, h3 {
   transform: translateX(-50%);
 }
 
+
+.rfm-marquee-container {
+  -webkit-mask-image:
+      -webkit-gradient(linear, left center, right center,
+          color-stop(0, transparent),
+          color-stop(.10, rgba(0,0,0,.5)),
+          color-stop(.25, black),
+          color-stop(.75, black),
+          color-stop(.90, rgba(0,0,0,.5)),
+          color-stop(1, transparent));
+
+}
+
+/* .rfm-marquee-container {
+  -webkit-mask-image: -webkit-gradient(linear, left top, right top, from(rgb(0 0 0 / 100%)), to(rgba(0,0,0,0)));
+} */
 
 
 /* .nav-logo-wrapper{
