--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -78,7 +78,7 @@ h1, h2, h3 {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   transform: translateY(2px);
-  transform: translateX(-59%);
+ /*  transform: translateX(-61%); */
 }
 
 .dropdown-content p {
