--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -454,3 +454,17 @@ $text-color: #161616; // Replace with your actual color value
   flex-direction: row;
   align-items: center;
 }
+
+.rfm-marquee {
+  flex: 0 0 auto;
+  min-width: var(--min-width);
+  z-index: 1;
+  display: flex;
+  gap: 30px;
+  flex-direction: row;
+  align-items: center;
+  animation: scroll var(--duration) linear var(--delay) var(--iteration-count);
+  animation-play-state: var(--play);
+  animation-delay: var(--delay);
+  animation-direction: var(--direction);
+}
