--- a/src/components/cookiesConcent/styles.module.scss
+++ b/src/components/cookiesConcent/styles.module.scss
@@ -31,7 +31,7 @@
   }
 
 .banner {
-  background-color: #252731;
+  background-color: transparent;
   display: flex;
   gap: 20px;
   font-size: 14px;
