--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -65,6 +67,10 @@ h1, h2, h3 {
   font-family: 'Pangram-Bold', sans-serif;
 }
 
+.font-inter{
+  font-family: 'Inter', sans-serif;
+
+}
 
 .dropdown {
   position: relative;
@@ -701,3 +707,29 @@ $text-color: #161616; // Replace with your actual color value
   border: 1px solid #BDBDBD;
 }
 
+
+
+/* styles.css or your relevant CSS file */
+.show-scrollbar {
+  overflow-y: auto; /* Show scrollbar only when necessary */
+  scrollbar-width: thin; /* Firefox: Makes the scrollbar thin */
+  scrollbar-color: #888 #f5f5f5; /* Firefox: Thumb and track color */
+}
+
+/* Custom scrollbar styles for Webkit browsers (e.g., Chrome, Safari) */
+.show-scrollbar::-webkit-scrollbar {
+  width: 6px; /* Thin scrollbar width */
+}
+
+.show-scrollbar::-webkit-scrollbar-track {
+  background-color: #f5f5f5; /* Background of the scrollbar track */
+}
+
+.show-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #888; /* Scrollbar thumb color */
+  border-radius: 3px; /* Round the corners of the scrollbar thumb */
+}
+
+.show-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Scrollbar thumb color on hover */
+}
