--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -747,3 +747,8 @@ $text-color: #161616; // Replace with your actual color value
 .show-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Scrollbar thumb color on hover */
 }
+
+.SideDock_module_root__406dab7b{
+  display: none!important;
+  visibility: hidden!important;
+}
